# FreeKassaIntegration

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  Readme.md
src/: FreeKassa.cpp  FreeKassa.hpp  WebhookServer.cpp  WebhookServer.hpp  main.cpp
status/: Page.html
